<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightBlue">


    <TextView
        android:id="@+id/My_Account_GlobalInfo"
        style="@style/Default_Orange_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/My_Account_GlobalInfo"
        app:layout_constraintBottom_toTopOf="@+id/My_Account_BackgroundImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/My_Account_BackgroundImage"
        android:layout_width="350dp"
        android:layout_height="500dp"
        android:background="@color/Grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497" />


    <View
        android:id="@+id/popUp_view_separation"
        android:layout_width="5dp"
        android:layout_height="200dp"
        android:background="@color/Orange"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/My_Account_BackgroundImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/My_Account_Name"
        style="@style/Default_Orange_Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_marginLeft"
        android:text="@string/My_Account_New_Password_button"
        app:layout_constraintEnd_toEndOf="@+id/My_Account_BackgroundImage"
        app:layout_constraintStart_toStartOf="@+id/My_Account_BackgroundImage"
        app:layout_constraintTop_toTopOf="@+id/My_Account_BackgroundImage" />


    <EditText
        android:id="@+id/My_Account_UserName_Input"
        android:inputType="textPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_marginLeft"
        android:hint="@string/Reset_Password_New_Password_rest"
        app:layout_constraintEnd_toEndOf="@+id/My_Account_BackgroundImage"
        app:layout_constraintStart_toStartOf="@+id/My_Account_BackgroundImage"
        app:layout_constraintTop_toBottomOf="@+id/My_Account_Name" />


    <EditText
        android:id="@+id/Reset_Password_New_Password"
        android:inputType="textPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/Reset_Password_New_Password"
        android:layout_marginTop="@dimen/item_margin"
        app:layout_constraintEnd_toEndOf="@+id/My_Account_BackgroundImage"
        app:layout_constraintStart_toStartOf="@+id/My_Account_BackgroundImage"
        app:layout_constraintTop_toBottomOf="@+id/My_Account_UserName_Input" />

    <EditText
        android:id="@+id/Reset_Password_New_PasswordConfirm"
        android:inputType="textPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/Reset_Password_ConfirmNew_Password"
        android:layout_marginTop="@dimen/item_margin"
        app:layout_constraintEnd_toEndOf="@+id/My_Account_BackgroundImage"
        app:layout_constraintStart_toStartOf="@+id/My_Account_BackgroundImage"
        app:layout_constraintTop_toBottomOf="@+id/Reset_Password_New_Password" />

    <Button
        android:id="@+id/Reset_Validation_Button"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:text="@string/Reset_confirm_button"
        app:layout_constraintBottom_toBottomOf="@+id/My_Account_BackgroundImage"
        app:layout_constraintEnd_toStartOf="@+id/popUp_view_separation"
        app:layout_constraintStart_toStartOf="@+id/My_Account_BackgroundImage"
        app:layout_constraintTop_toTopOf="@+id/popUp_view_separation" />

    <Button
        android:id="@+id/Reset_Abort_Button"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:text="@string/Reset_abord_button"
        app:layout_constraintBottom_toBottomOf="@+id/My_Account_BackgroundImage"
        app:layout_constraintEnd_toEndOf="@+id/My_Account_BackgroundImage"
        app:layout_constraintStart_toEndOf="@+id/popUp_view_separation"
        app:layout_constraintTop_toTopOf="@+id/popUp_view_separation" />





</androidx.constraintlayout.widget.ConstraintLayout>